// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeedbackCard - Snapshots > matches snapshot when loading 1`] = `
<div
  class="flex w-full max-w-(--filter-bar-width) flex-col gap-2"
  data-testid="feedback-card-skeleton"
>
  <div
    class="animate-pulse bg-muted h-8 w-32 rounded-md"
    data-slot="skeleton"
    data-testid="feedback-card-skeleton-heading"
  />
  <div
    class="flex w-full min-w-0 flex-col gap-4 rounded-lg border border-dashed border-input p-6"
    data-testid="container"
  >
    <div
      class="flex w-full min-w-0 items-center gap-2"
      data-testid="container"
    >
      <div
        class="animate-pulse bg-muted h-12 w-12 shrink-0 rounded-md"
        data-slot="skeleton"
        data-testid="feedback-card-skeleton-avatar"
      />
      <div
        class="animate-pulse bg-muted h-6 w-40 max-w-full rounded-md"
        data-slot="skeleton"
      />
    </div>
    <div
      class="animate-pulse bg-muted h-12 w-full rounded-md"
      data-slot="skeleton"
      data-testid="feedback-card-skeleton-button"
    />
  </div>
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot with authenticated user with avatar 1`] = `
<div
  class="flex w-full max-w-(--filter-bar-width) flex-col gap-2"
  data-testid="feedback-card"
>
  <div
    class="font-light text-muted-foreground"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feedback
  </div>
  <div
    class="flex w-full min-w-0 cursor-pointer flex-col gap-4 rounded-lg border border-dashed border-input p-6"
    data-testid="container"
  >
    <div
      class="flex w-full min-w-0 items-center gap-2"
      data-testid="container"
    >
      <div
        class="flex size-12 shrink-0 items-center justify-center rounded-md p-2 shadow-xs"
        data-testid="container"
      >
        <div
          class="h-12 w-12"
          data-avatar-url="https://cdn.example.com/avatar/user123pubky"
          data-name="Miguel Medeiros"
          data-testid="avatar-with-fallback"
        >
          <img
            alt="Miguel Medeiros"
            data-testid="avatar-image"
            src="https://cdn.example.com/avatar/user123pubky"
          />
        </div>
      </div>
    </div>
    <button
      class="w-full cursor-pointer text-left text-base leading-normal font-medium break-words text-muted-foreground"
      data-testid="button"
    >
      What do you think about Pubky?
    </button>
  </div>
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot with authenticated user without avatar 1`] = `
<div
  class="flex w-full max-w-(--filter-bar-width) flex-col gap-2"
  data-testid="feedback-card"
>
  <div
    class="font-light text-muted-foreground"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feedback
  </div>
  <div
    class="flex w-full min-w-0 cursor-pointer flex-col gap-4 rounded-lg border border-dashed border-input p-6"
    data-testid="container"
  >
    <div
      class="flex w-full min-w-0 items-center gap-2"
      data-testid="container"
    >
      <div
        class="flex size-12 shrink-0 items-center justify-center rounded-md p-2 shadow-xs"
        data-testid="container"
      >
        <div
          class="h-12 w-12"
          data-avatar-url="no-url"
          data-name="Miguel"
          data-testid="avatar-with-fallback"
        >
          <div
            class="text-sm"
            data-testid="avatar-fallback"
          >
            M
          </div>
        </div>
      </div>
    </div>
    <button
      class="w-full cursor-pointer text-left text-base leading-normal font-medium break-words text-muted-foreground"
      data-testid="button"
    >
      What do you think about Pubky?
    </button>
  </div>
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot with long name (CSS truncation) 1`] = `
<div
  class="flex w-full max-w-(--filter-bar-width) flex-col gap-2"
  data-testid="feedback-card"
>
  <div
    class="font-light text-muted-foreground"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feedback
  </div>
  <div
    class="flex w-full min-w-0 cursor-pointer flex-col gap-4 rounded-lg border border-dashed border-input p-6"
    data-testid="container"
  >
    <div
      class="flex w-full min-w-0 items-center gap-2"
      data-testid="container"
    >
      <div
        class="flex size-12 shrink-0 items-center justify-center rounded-md p-2 shadow-xs"
        data-testid="container"
      >
        <div
          class="h-12 w-12"
          data-avatar-url="no-url"
          data-name="VeryLongUserNameThatExceedsTenCharacters"
          data-testid="avatar-with-fallback"
        >
          <div
            class="text-sm"
            data-testid="avatar-fallback"
          >
            V
          </div>
        </div>
      </div>
    </div>
    <button
      class="w-full cursor-pointer text-left text-base leading-normal font-medium break-words text-muted-foreground"
      data-testid="button"
    >
      What do you think about Pubky?
    </button>
  </div>
</div>
`;

exports[`FeedbackCard - Snapshots > matches snapshot with unauthenticated user 1`] = `
<div
  class="flex w-full max-w-(--filter-bar-width) flex-col gap-2"
  data-testid="feedback-card"
>
  <div
    class="font-light text-muted-foreground"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feedback
  </div>
  <div
    class="flex w-full min-w-0 cursor-pointer flex-col gap-4 rounded-lg border border-dashed border-input p-6"
    data-testid="container"
  >
    <div
      class="flex w-full min-w-0 items-center gap-2"
      data-testid="container"
    >
      <div
        class="flex size-12 shrink-0 items-center justify-center rounded-md p-2 shadow-xs"
        data-testid="container"
      >
        <div
          class="h-12 w-12"
          data-avatar-url="no-url"
          data-name="Your Name"
          data-testid="avatar-with-fallback"
        >
          <div
            class="text-sm"
            data-testid="avatar-fallback"
          >
            Y
          </div>
        </div>
      </div>
    </div>
    <button
      class="w-full cursor-pointer text-left text-base leading-normal font-medium break-words text-muted-foreground"
      data-testid="button"
    >
      What do you think about Pubky?
    </button>
  </div>
</div>
`;
